<resources>
    <string name="app_name">My Application</string>
    <string name="facebook_app_id">966395066741035</string>
    <string name="core_footer_item1">Item1</string>
    <string name="core_footer_item2">Item2</string>
    <string name="core_footer_item3">Item3</string>
    <string name="core_footer_item4">Item4</string>
    <string name="core_menu_item_test">Setting</string>
    <string name="cancel" >Cancel</string>
    <string name="delete">Delete</string>
    <string name="ok">Ok</string>
    <string name="footer_item1">Setting</string>
    <string name="footer_item2">Note</string>
    <string name="footer_item3">Book</string>
    <string name="footer_item4">Todo</string>
    <string name="field_name">Name</string>
    <string name="field_sex">Sex</string>
    <string name="field_birth">Birth</string>
    <string name="field_phone">Phone</string>
    <string name="field_site">Site</string>
    <string name="mock_name">Viet,</string>
    <string name="mock_age">25</string>
    <string name="mock_motto">Don\'t work hard, work intelligent</string>
    <string name="mock_sex">Male</string>
    <string name="mock_birth">12/03/90</string>
    <string name="mock_phone">01253546364</string>
    <string name="mock_site">vietnh90@gmail.com</string>
    <string name="mock_book_name">Gone with the wind</string>
    <string name="mock_book_author">Corthy Doctorow</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="mail_address">mail address</string>
    <string name="pass_word">Password</string>
    <string name="sign_out">Sign out</string>
    <string name="list">List</string>
    <string name="form">Form</string>
    <string name="setting">Setting</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="add">Add</string>
    <string name="camera">Camera</string>
    <string name="take_photo">Take Photo</string>
    <string name="take_video">Take Video</string>
    <string name="preview">Preview</string>
    <string name="remind">You must take a photo, then enter the Title and the Description</string>
    <string name="title_activity_splash_screen">SplashScreen</string>
    <string name="title_activity_main">Main</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_activity_with_frg">ActivityWithFrg</string>
    <string name="title_activity_my">MyActivity</string>
    <string name="title_activity_sign_up_in">SignUpInActivity</string>
    <string name="fragment_book_list_title">Books</string>
    <string name="fragment_book_list_add">Add</string>
    <string name="fragment_book_list_empty">Enjoy Reading</string>
    <string name="fragment_note_list_edit">Edit</string>
    <string name="fragment_note_list_add">Add</string>
    <string name="fragment_note_detail_done">Done</string>
    <string name="fragment_note_detail_today">Today</string>
    <string name="fragment_note_detail_hint">Your text here</string>
    <string name="fragment_setting_title">Setting</string>
    <string name="fragment_setting_push">Push Notification</string>
    <string name="fragment_setting_show_mottos">Show mottos</string>
    <string name="title_quicker_project">Quicker</string>
    <string name="qk_account_email_address">E-mail address</string>
    <string name="qk_account_new_pass">New password</string>
    <string name="qk_account_new_pass2">New password</string>
    <string name="qk_account_new_pass_confirm">New password (confirmation)</string>
    <string name="qk_account_new_pass_confirm2">New password (confirmation)</string>
    <string name="qk_account_current_pass">Current password</string>
    <string name="qk_account_email">E-mail</string>
    <string name="qk_account_email_short">E-mail</string>
    <string name="qk_account_pass">Password</string>
    <string name="qk_account_name_ka">First Name</string>
    <string name="qk_account_name_kn">First Name(Kana)</string>
    <string name="qk_account_last_name_ka">Last Name</string>
    <string name="qk_account_last_name_kn">Last Name(Kana)</string>
    <string name="qk_common_action_edit">Edit</string>
    <string name="qk_common_action_cancel">Cancel</string>
    <string name="qk_common_action_ok">OK</string>
    <string name="qk_common_action_not">NOT</string>
    <string name="qk_common_action_delete">Delete</string>
    <string name="qk_common_action_complete">Complete</string>
    <string name="qk_common_action_call">Call</string>
    <string name="qk_common_action_transmission">Transmission</string>
    <string name="qk_common_action_next">Next</string>
    <string name="qk_common_action_return">Return</string>
    <string name="qk_common_action_skip">SKIP</string>
    <string name="qk_common_action_update">Update</string>
    <string name="qk_common_tel">Tel</string>
    <string name="qk_common_contact">Contact</string>
    <string name="qk_common_address">Address</string>
    <string name="qk_common_confirm_pass_title">Password confirmation</string>
    <string name="qk_common_confirm_pass_msg">The deletion of the account password is required</string>
    <string name="qk_common_confirm_pass_reinput_title">Please refer to the re-input</string>
    <string name="qk_common_confirm_pass_reinput_msg">Passwords do not match</string>
    <string name="qk_common_format_yen">¥</string>
    <string name="qk_common_format_year">年</string>
    <string name="qk_common_format_month">月</string>
    <string name="qk_common_format_day">日</string>
    <string name="qk_common_format_name">名</string>
    <string name="qk_common_format_minute">分</string>
    <string name="qk_common_count_yen">%1$s円</string>
    <string name="qk_common_yen">円</string>
    <string name="qk_cl_common_tab_footer_recruitment">バイトを探す</string>
    <string name="qk_cl_common_tab_footer_job_already">応募済み</string>
    <string name="qk_cl_common_tab_footer_notification">通知</string>
    <string name="qk_cl_common_tab_footer_mypage">マイページ</string>
    <string name="qk_common_network_problem_msg">My Internet connection is offline</string>
    <string name="qk_common_network_try_again">I try again</string>
    <string name="qk_common_crop_adjust_msg">Adjust the position and size of the photos</string>
    <string name="qk_common_count_age_gender">(%1$syear old・%2$s)</string>
    <string name="qk_cl_common_day">%sDay</string>
    <string name="qk_cl_common_hours">%sHours</string>
    <string name="qk_cl_common_minute">%sMinute</string>
    <string name="qk_cl_common_second">%sSecond</string>
    <string name="qk_cl_acc_profile_recruitment_expiration">Recruitment expiration!</string>
    <string name="qk_format_datetime_1">MM\'月\'dd\'日\'</string>
    <string name="qk_format_datetime_2">MM\'月\'dd\'日（\'E\'）\'</string>
    <string name="qk_format_datetime_3">yyyy\'年\'MM\'月\'dd\'日\' HH:mm</string>
    <string name="qk_format_datetime_4">yyyy\'年\'MM\'月\'dd\'日\'</string>
    <string name="qk_menu_bottom_offer">Offer</string>
    <string name="qk_menu_bottom_work">Work</string>
    <string name="qk_menu_bottom_notify">Notification</string>
    <string name="qk_menu_bottom_mypage">My page</string>
    <string name="qk_menu_slice_title">Switching of shop</string>
    <string name="qk_menu_slice_add_shop">You want to add a shop</string>
    <string name="qk_upgrade_msg">from May 2015, it became possible application from job seekers to recruitment content. Please use the JobQuicker to solve the labor shortage of your shop in two hours by all means.</string>
    <string name="qk_upgrade_btn_update">Update</string>
    <string name="qk_walkthrough1_msg1">Suddenly as soon as recruiting at such time that manpower is not enough!</string>
    <string name="qk_walkthrough1_msg2">You can start the recruitment by creating immediately in the day of recruitment</string>
    <string name="qk_walkthrough2_msg1">Creating a recruitment course Free!</string>
    <string name="qk_walkthrough2_msg2">Wanted is totally free! The first time accounting work the adopted person will occur</string>
    <string name="qk_walkthrough3_msg1">Immediately determine the adoption of propriety!</string>
    <string name="qk_walkthrough3_msg2">Check the recruiter of photos and work experience and are determined to adopt immediately!</string>
    <string name="qk_walkthrough4_msg1">The behalf of the salary transfer</string>
    <string name="qk_walkthrough4_msg2">You can payment by credit card or invoice to all troublesome payroll Acting end of the month</string>
    <string name="qk_walkthrough4_get_start_msg">Getting Started!</string>
    <string name="qk_common_txt_button">Click Button</string>
    <string name="qk_shop_shop_name">いざかやジャパン東京スカイツリーソラマチ店</string>
    <string name="qk_shop_business_industry_title">Business· Industry</string>
    <string name="qk_shop_business_item">Business</string>
    <string name="qk_shop_industry_item">Industry</string>
    <string name="qk_shop_description_title">Description of Shop</string>
    <string name="qk_shop_edit_description_title">Description</string>
    <string name="qk_shop_contact_address_title">Contact · Address</string>
    <string name="qk_shop_access_info_title">Access information</string>
    <string name="qk_shop_edit_delegate_msg">Industries, business category, contacts, you will not be able to change from on the application for the address. If you would like to change, please contact the call center.</string>
    <string name="qk_shop_delete_shop_msg">You can delete this shop</string>
    <string name="qk_shop_manage_msg1">Let us set the management shop</string>
    <string name="qk_shop_manage_msg2">The shop you want to manage is not yet. You can either newly registered a management shop</string>
    <string name="qk_shop_manage_examination_msg">※ at the time of new registration has examination</string>
    <string name="qk_shop_input_info_msg">Contents had it registered\nIt is displayed within the app as all Jobs</string>
    <string name="qk_shop_input_info_crop">Registration of store photos</string>
    <string name="qk_shop_billboard_photo">Add a billboard photo</string>
    <string name="qk_shop_in_store_photo">Add a in-store photo</string>
    <string name="qk_shop_input_information_testimonials">Testimonials of shop</string>
    <string name="qk_indicator_input_info_shop">Input info shop</string>
    <string name="qk_indicator_taken_photo_shop">Taken photo</string>
    <string name="qk_indicator_app_completion">App completion</string>
    <string name="qk_photo_shop_register_msg1">Stores check for signs and the photos store\nThank you for your submission</string>
    <string name="qk_photo_shop_register_msg2">※The captured photo is used only to check the time of application</string>
    <string name="qk_shop_examination_registered">It has been registered</string>
    <string name="qk_shop_examination_msg">It is currently under review ...</string>
    <string name="qk_shop_examination_ng_reason">We were allowed to send off the registration because it is not a currently registered possible category</string>
    <string name="qk_payment_title">Payment method</string>
    <string name="qk_payment_default_card_unselected">Unselected</string>
    <string name="qk_payment_default_card_description_not_select">Payment method is not selected. Please select the settlement method.</string>
    <string name="qk_payment_default_card_description_notify">It is not possible to start the recruitment and not the selection of settlement method</string>
    <string name="qk_payment_select_credit_card_txt_button">To credit card registration</string>
    <string name="qk_payment_select_credit_card_description_notify">In order to perform the credit card registration. Browser will rise</string>
    <string name="qk_payment_register_credit_card">Credit</string>
</resources>