<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="fill_parent"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_height="fill_parent"
    tools:context=".MainActivity"
    android:background="@color/core_bg_light_green">

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/img_primary_card_main"
        android:layout_alignParentRight="false"
        android:layout_alignParentEnd="false" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:id="@+id/lnr_primary_card_info">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/field_name"
                android:id="@+id/textView2"
                android:layout_marginRight="10dp" />

            <com.example.vietnguyen.core.views.widgets.CoreTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mock_name"
                custom:jsonKey="name"
                android:id="@+id/textView3" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/linearLayout" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/field_sex"
                android:id="@+id/textView4"
                android:layout_marginRight="10dp" />

            <com.example.vietnguyen.core.views.widgets.CoreTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mock_sex"
                custom:jsonKey="sex"
                android:id="@+id/textView5" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>